--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-native-material-bottom-navigation": "^1.0.0",
+    "react-native-tab-view": "^1.0.2",
+    "react-navigation": "^2.3.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
