--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-native": "0.55.4",
     "react-native-material-bottom-navigation": "^1.0.0",
     "react-native-tab-view": "^1.0.2",
-    "react-navigation": "^2.3.1"
+    "react-navigation": "^2.3.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
