--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native-tab-view": "^1.0.2",
     "react-navigation": "^2.3.1",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-persist": "^5.10.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
