--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.2.4",
+    "apollo-client": "^2.3.4",
+    "apollo-link-http": "^1.5.4",
+    "graphql-tag": "^2.9.2",
     "react": "16.3.1",
+    "react-apollo": "^2.1.5",
     "react-native": "0.55.4",
     "react-native-material-bottom-navigation": "^1.0.0",
     "react-native-tab-view": "^1.0.2",
     "react-navigation": "^2.3.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-persist": "^5.10.0"
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
@@ -22,6 +28,7 @@
     "babel-preset-react-native": "4.0.0",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.9.1",
+    "graphql": "^0.13.2",
     "jest": "23.1.0",
     "react-test-renderer": "16.3.1"
   },
