--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,11 +98,11 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.kickerapp"
+        applicationId "kickerapp.cool.kicker"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName "0.1"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
