--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "storybook": "storybook start -p 7007"
+    "storybook": "storybook start -p 7007",
+    "postversion": "react-native-version --never-amend"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.2.4",
@@ -24,22 +25,23 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^3.4.8",
+    "@storybook/addon-links": "^3.4.8",
+    "@storybook/addons": "^3.4.8",
+    "@storybook/react-native": "^3.4.8",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
+    "babel-runtime": "^6.26.0",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.9.1",
     "graphql": "^0.13.2",
     "jest": "23.1.0",
-    "react-test-renderer": "16.3.1",
-    "@storybook/react-native": "^3.4.8",
-    "@storybook/addon-actions": "^3.4.8",
-    "@storybook/addon-links": "^3.4.8",
-    "@storybook/addons": "^3.4.8",
-    "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0",
+    "prop-types": "^15.6.2",
     "react-dom": "16.3.1",
-    "prop-types": "^15.6.2"
+    "react-native-version": "^2.6.2",
+    "react-test-renderer": "16.3.1"
   },
   "jest": {
     "preset": "react-native"
