--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.55.4",
     "react-native-material-bottom-navigation": "^1.0.0",
     "react-native-tab-view": "^1.0.2",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.3.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
