--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-apollo": "^2.1.5",
     "react-native": "0.55.4",
     "react-native-material-bottom-navigation": "^1.0.0",
+    "react-native-sectioned-multi-select": "^0.5.1",
     "react-native-tab-view": "^1.0.2",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.3.1",
