Enhance player selection grid-view

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.3.1",
     "react-apollo": "^2.1.5",
     "react-native": "0.55.4",
+    "react-native-image-placeholder": "^1.0.14",
     "react-native-material-bottom-navigation": "^1.0.0",
     "react-native-sectioned-multi-select": "^0.5.1",
     "react-native-tab-view": "^1.0.2",
