--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
     "sourceType": "module"
   },
   "globals": {
-    "console": true, "alert": true
+    "console": true, "alert": true, "PropTypes": true
   },
   "plugins": [ "react" ],
   "rules": {
