--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.55.4",
     "react-native-image-placeholder": "^1.0.14",
     "react-native-material-bottom-navigation": "^1.0.0",
+    "react-native-search-box": "^0.0.19",
     "react-native-sectioned-multi-select": "^0.5.1",
     "react-native-tab-view": "^1.0.2",
     "react-native-vector-icons": "^4.6.0",
