--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-material-bottom-navigation": "^1.0.0",
     "react-native-search-box": "^0.0.19",
     "react-native-sectioned-multi-select": "^0.5.1",
+    "react-native-sortable-list": "^0.0.22",
     "react-native-tab-view": "^1.0.2",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.3.1",
